--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_color">#FF191926</color>
+    <color name="color_for_text_white">#FFECECEC</color>
+    <color name="my_grey">#6D6D80</color>
+    <color name="qqq">#13C53A</color>
 </resources>
