--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.AppBarLayout
-    android:id="@+id/general_appbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@null"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <androidx.appcompat.widget.Toolbar
+
+    <com.google.android.material.appbar.AppBarLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/moviesAppBar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="wrap_content"
+        android:background="@null"
+app:elevation="0dp"
+
+        >
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_trans"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+>
+
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="Login"
-            android:textSize="20sp"/>
+            android:text="Back"
+            android:textColor="@color/my_grey"
+            android:textSize="14sp"
+            app:drawableLeftCompat="@drawable/ic_baseline" />
     </androidx.appcompat.widget.Toolbar>
-
 </com.google.android.material.appbar.AppBarLayout>
+
