--- a/app/src/main/res/layout/toolbar2.xml
+++ b/app/src/main/res/layout/toolbar2.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar_trans"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:layout_alignParentStart="true"
-    app:theme="@style/CustomActionBar">
+    android:layout_height="match_parent">
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/welcomeMessage"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textColor="@color/qqq"
-        android:text="Login"
-        android:textSize="20sp"/>
-</androidx.appcompat.widget.Toolbar>
+        android:layout_gravity="center"
+        android:text="Hello World!"/>
+</FrameLayout>
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<androidx.appcompat.widget.Toolbar-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    android:id="@+id/toolbar_trans"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="?attr/actionBarSize"-->
+<!--    android:layout_alignParentStart="true">-->
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:textColor="@color/qqq"-->
+<!--        android:text="Login"-->
+<!--        android:textSize="20sp"/>-->
+<!--</androidx.appcompat.widget.Toolbar>-->
