--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color_for_text_white">#FFECECEC</color>
     <color name="my_grey">#6D6D80</color>
     <color name="qqq">#13C53A</color>
+    <color name="my_red">#FF3466</color>
 </resources>
