--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -27,7 +27,6 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
@@ -39,7 +38,7 @@
         android:singleLine="false"
         android:text="@string/film_name"
         android:textAlignment="viewStart"
-        android:textColor="@color/color_for_text_white"
+        android:textColor="@color/my_white"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="13+"
-        android:textColor="@color/color_for_text_white"
+        android:textColor="@color/my_white"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView" />
