--- a/app/src/main/res/layout-land/fragment_movies_details.xml
+++ b/app/src/main/res/layout-land/fragment_movies_details.xml
@@ -313,7 +313,7 @@
             />
         <include
             android:id="@+id/my_toolbar"
-            layout="@layout/toolbar"
+            layout="@layout/toolbar1"
 
 
             app:layout_constraintStart_toStartOf="parent"
