--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -289,7 +289,7 @@
 
     <include
         android:id="@+id/my_toolbar"
-        layout="@layout/toolbar"
+        layout="@layout/toolbar1"
 
 
         app:layout_constraintStart_toStartOf="parent"
