--- a/app/src/main/res/layout/toolbar2.xml
+++ b/app/src/main/res/layout/toolbar2.xml
@@ -12,7 +12,7 @@
     >
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_trans"
+        android:id="@+id/toolbar_trans2"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         >
