--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/root_view"
 
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <include
-        android:id="@+id/my_toolbar2"
-        layout="@layout/toolbar2"
-        android:visibility="gone"
 
 
-
-
-
-        />
-    <include
-        android:id="@+id/my_toolbar1"
-        layout="@layout/toolbar1"
-        android:visibility="gone"
-
-
-
-
-
-        />
     <FrameLayout
         android:id="@+id/fragments_container"
         android:layout_width="match_parent"
