--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -287,13 +287,22 @@
         app:layout_constraintStart_toStartOf="@+id/imageView12"
         app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
-    <include
-        android:id="@+id/my_toolbar"
-        layout="@layout/toolbar1"
-
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_trans1"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:fitsSystemWindows="true"
+        >
 
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Back"
+            android:textColor="@color/my_grey"
+            android:textSize="14sp"
+            app:drawableLeftCompat="@drawable/ic_baseline" />
+    </androidx.appcompat.widget.Toolbar>
 </androidx.constraintlayout.widget.ConstraintLayout>
