--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -9,21 +9,46 @@
     android:id="@+id/viewroot1"
     >
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_trans2"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            app:srcCompat="@drawable/combined_shape" />
+
+        <TextView
+            android:id="@+id/textView14"
+            style="@style/text3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:paddingStart="8dp"
+            android:text="Movies list"
+            android:textSize="14sp" />
+
+    </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/material_card"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+        android:layout_marginTop="8dp"
         android:checkable="true"
         android:clickable="true"
         android:focusable="true"
         android:theme="@style/MyCardView"
         app:cardCornerRadius="8dp"
-        app:cardElevation="0dp"
 
+        app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_trans2"
         app:strokeColor="@color/border_color"
         app:strokeWidth="1dp">
 
@@ -160,7 +185,7 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textView144"
                 style="@style/text3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -179,7 +204,7 @@
                 android:text="137 min"
                 android:textSize="8sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                app:layout_constraintTop_toBottomOf="@+id/textView144" />
 
             <View
                 android:layout_width="match_parent"
