--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/viewroot"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/viewroot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
@@ -69,8 +69,8 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="106dp"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="sans-serif"
         android:inputType="textCapSentences|textMultiLine"
         android:singleLine="false"
@@ -97,14 +97,13 @@
         app:layout_constraintStart_toStartOf="@+id/textView" />
 
 
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif"
         android:text="Action, Adventure, Fantasy"
         android:textColor="@color/my_red"
@@ -162,8 +161,8 @@
         android:id="@+id/textView6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto"
         android:lineSpacingExtra="6sp"
         android:paddingTop="24dp"
@@ -232,8 +231,8 @@
         android:id="@+id/imageView12"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
         android:foreground="@drawable/chris__2_"
         app:layout_constraintBottom_toBottomOf="@+id/imageView11"
         app:layout_constraintDimensionRatio="1:1"
@@ -291,10 +290,9 @@
         android:id="@+id/toolbar_trans1"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:fitsSystemWindows="true"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
