--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".MainActivity">
+    >
 
 
     <ImageView
@@ -287,13 +287,20 @@
         app:layout_constraintStart_toStartOf="@+id/imageView12"
         app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
-    <include
-        android:id="@+id/my_toolbar"
-        layout="@layout/toolbar1"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_trans1"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Back"
+            android:textColor="@color/my_grey"
+            android:textSize="14sp"
+            app:drawableLeftCompat="@drawable/ic_baseline" />
+    </androidx.appcompat.widget.Toolbar>
 </androidx.constraintlayout.widget.ConstraintLayout>
