--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="materialCardViewStyle">@style/MyCardView</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="fontFamily">sans-serif</item>
 <!--        <item name="android:windowDrawsSystemBarBackgrounds">false</item>-->
 <!--        <item name="android:windowTranslucentStatus">true</item>-->
     </style>
